--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -191,8 +191,8 @@ a
       border-radius: 50%
       border: solid #888888 0.15vw
       #userpic
-        width: 100%
-        height: 100%
+        width: 2vw
+        height: 2vw
     #logout
       background-image: url('../file/logouticon.png')
       
