--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -36,15 +36,27 @@ a
   text-decoration: none
   color: black
 
+#profileall
+  display: flex
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  min-height: calc(110vh)
+
 footer
-  height: 2vw
+  height: 5vh
   background-color: var(--color-main)
-  width: 99.2vw
   display: flex
   flex-direction: row
   justify-content: space-around
-  left: -50%
-  padding-top: 1vw
+  align-items: center;
+  flex-wrap: nowrap;
+  //left: -50%
+  padding-bottom: 1vh
+  width: 100%
+  p
+    font-size: 1vw
   
   
 #phoneerrormsg
@@ -72,14 +84,15 @@ footer
   z-index: 6
   
 #profilepanel
-  position: absolute
-  transform: translate(-50%, 0)
+  //position: absolute
+  //transform: translate(-50%, 0)
   top: 10%
   left: 50%
   display: flex
   flex-direction: column
   justify-content: flex-start
   width: 60%
+  margin-top: 10vh
   background-color: var(--background-color)
   border-radius: 3vw
   // align-items: center;
@@ -504,257 +517,341 @@ footer
       margin-left: 0.5vw
 
 #eventwindow
-  //display: none
+  display: flex
   position: fixed
+  flex-direction: row
+  flex-wrap: nowrap
+  align-content: flex-start
+  justify-content: space-between
+  align-items: flex-start
+  
   transform: translate(-50%, -50%)
-  top: 55%
+  top: 50%
   left: 50%
-  width: 45%
-  padding-top: 30%
+  width: 37%
+  padding: 5vw 2vw 1.5vw 2vw
   background-color: #F5FBFE
   border-radius: 3vw
   border: 5px solid rgba(58, 237, 194, 0.5)
   box-shadow: 10px 10px 25px 5px #00000026
   z-index: 7
   
-  *
-    font-color: #000000
-  
-  p
-    font-size: 1vw
-  
-  #description
-    position: absolute
-    left: 3.5vw
-    top: 3.5vw
-    height: 65%
-    width: 60%
     
-    p
-      font-size: 2.5vw
-      color: #000000
-      font-weight: 600
+  #eventwindow-left
+    display: flex
+    flex-direction: column
+    flex-wrap: nowrap
+    justify-content: flex-start
+    align-items: flex-start
     
-    #subtitle
-      margin: 0.7vw 0 0 0
-      font-size: 1.3vw
-      color: rgba(61, 201, 167, 1)
+    width: 85%
     
-    #keywords
-      display: flex
-      flex-direction: row
-      margin: 1vw 0 0 0
-      *
-        font-size: 1.5vw
-        color: purple
+    
+    #eventwindow-bg
+      position: absolute
+      top: 2vw
+      left: 2.5vw
+      height: 7.5vw
+      width: 7.5vw
+      z-index: -1
+      opacity: 1
+      
+      #eventpic
+        height: 100%
+        width: 100%
         
-    #detail
-      font-size: 1.3vw
-      color: #000000
-      margin: 1vw 0 0 0
-      line-height: 1.7vw
-      height: 60%
+        img
+          height: 100%
+          width: 100%
+          border-radius: 1vw
+        p
+          font-size: 1vw
+          line-height: 8vw
+          background-color: #EFFFFB
+          
+    
+    
+    
+    #description
+      display: flex
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-content: flex-start;
+      justify-content: flex-start;
+      align-items: flex-start
+    
+    #description-top
+      display: flex
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-content: flex-start;
+      justify-content: space-between
+      align-items: flex-end
+      width: 22vw
+      margin-left: 9vw
+      
+      #event-title
+        font-size: 2vw
+        font-weight: 900
+        
+      #event-date
+        font-size: 1vw
+        color: #444444
+        margin: 0
+        
+    #event-subtitle
+      font-size: 1vw
+      color: #3DC9A7
+      margin: 0.3vw 0 0 9vw
+      
+    #event-detail
+      font-size: 1.2vw
+      min-height: 3vw
+      max-height: 4.5vw
+      margin: 2.2vw 0 0 1vw
+      
       overflow: scroll
       overflow-x: hidden
-
-
-  #member
-    position: absolute
-    transform: translate(0, -100%)
-    display: flex
-    flex-direction: row
-    align-itemS: center
-    bottom: -1vw
-    width: 70%
-    height: 3vw
-    left: 3.3vw
     
-    *
-      //position: relative
-      margin: 0 0.7vw 0 0
     
-    a
-      margin: 0
-    p
-      font-size: 1vw
-      vertical-align: middle
-      margin: 0
-      padding: 1vw 0
-      
-    #bar
-      width: 0.2vw
-      height: 3vw
-      //transform: translate(0, -50%)
-      //top: 55%
-      background-color: #B0B0B0
-      
-    .member
-      height: 3vw
-      width: 3vw
-      border-radius: 50%
-      background-color: #E0E0E0
-    .participant
-      border: var(--color-main) solid 0.2vw
-
-    #organizer
-      border: #75E1C7 solid 0.2vw
-
-      
-  #operatebg
-    background-color: rgba(58, 237, 194, 0.5)
-    position: absolute
-    right: -2px
-    bottom: -2px
-    width: 32%
-    height: 20%
-    border-radius: 5vw 0 3vw 0
-  
-  #exitbtn1
-    transform: translate(-50%, 0)
-    top: 2vw
-    right: -5vw
-    width: 1.5vw
-    height: auto
-  
-  #eventoperate
-    position: absolute
-    transform: translate(0, -50%)
-    height: 100%
-    width: 20%
-    top: 50%
-    right: 3vw
-    *
-      position: absolute
-
-    #flag
-      display: none
-      transform: translate(-50%, 0)
-      top: 0
-      left: 50%
-      width: 3vw
-      height: auto
-      #flag-y
-        display: none
-        width: 100%
-        height: auto
-        box-shadow: 10px 10px 25px 5px #00000026
-        
-      #flag-n
-        display: block
-        width: 100%
-        height: auto
-        box-shadow: 10px 10px 25px 5px #00000026
-      
-    #date
-      transform: translate(-50%, -50%)
-      top: 6vw
-      left: 70%
-      width: 10vw
-      opacity: 0.8
-      font-size: 1vw
-
-    a
-      transform: translate(-50%, -50%)
-      left: 50%
-      #organizerpic
-        transform: translate(-50%, -50%)
-        height: 6vw
-        width: 6vw
-        top: 10.5vw
-        left: 50%
-        border-radius: 3vw
-        background-color: #C4C4C4
-        
-      p
-        transform: translate(-50%, -50%)
-        top: 14.7vw
-        left: 50%
-        font-size: 1.5vw
-        color: black
-        width: 5vw
-    
-    a#login-redirect
-      width: 6vw
-      height: 3vw
-      transform: translate(-50%, -50%)
-      top: 95%
+    #eventmsgregion
       display: flex
-      flex-direction: row
-    #likebutton
-      left: 1vw
-      bottom: 1vw
-      height: 3vw
-      width: 3vw
-      background-image: url('../file/like-n.png')
-      background-repeat: no-repeat
-      background-size: contain
-      form
-        button
-          background: Transparent
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-content: center;
+      align-items: flex-start;
+      justify-content: flex-start;
+      
+      width: 95%
+      height: 15vw
+      background-color: #EFFFFB
+      border-radius: 1.5vw
+      padding: 0.5vw
+      margin: 0.5vw 0 0 0.5vw
+      
+      #msgtitle
+        //position: absolute
+        font-size: 1.3vw
+        padding: 0 0 0.5vw 0.7vw
+        font-weight: 900
+        
+      #eventmsg-board
+        display: flex
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-content: center;
+        justify-content: flex-start;
+        align-items: flex-start;
+        
+        overflow: scroll
+        overflow-x: hidden
+        
+        .eventmsg:hover
+          background-color: #EFFFFB
+        .eventmsg
+          display: flex
+          flex-direction: row;
+          flex-wrap: nowrap;
+          align-items: center;
+          width: 28.5vw
+          margin: 0 0 0.4vw 0
+          border-radius: 0.5vw
+          background-color: #F8FFFD
+          padding: 0.5vw
+          
+          a
+            margin: 0
+          
+          .sender
+            width: 2.5vw
+            height: 2.5vw
+            border-radius: 50%
+            background-color: white
+          
+          #eventmsg-right
+            display: flex
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: space-between
+            align-items: flex-start;
+            width: 100%
+            min-height: 2.5vw
+            margin-left: 1vw
+            
+            
+            #eventmsg-righttop
+              display: flex
+              flex-direction: row;
+              flex-wrap: nowrap;
+              align-content: center;
+              align-items: center;
+              justify-content: space-between;
+              width: 100%
+              
+              
+              #eventmsg-sendername
+                font-size: 1.05vw
+                width: 4vw
+                font-weight: 900
+              #event-date
+                font-size: 0.7vw
+                width: 15vw
+                color: #666666
+                text-align: right
+                
+            #eventmsgtext
+              font-size: 1.1vw
+              color: #595959
+        
+    #eventmsg-sender
+      display: flex
+      flex-direction: row;
+      flex-wrap: nowrap;
+      align-items: center;
+      justify-content: flex-start;
+      margin-left: 0.5vw
+      
+      a
+        margin: 0
+      
+      #senderpic
+        width: 3vw
+        height: 3vw
+        border-radius: 50%
+        background-color: #EEEEEE
+        border: none
+        margin-left: 1vw
+        
+      .comment-operate-region
+        display: flex
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-content: center;
+        align-items: center;
+        justify-content: space-around;
+        margin: 1vw
+        height: 1.5vw
+        
+        .eventmsg-insert
+          outline: none
           border: none
+          width: 19.5vw
+          border-radius: 1vw 0 0 1vw
+          background-color: #F2F2F2
+          padding: 0.5vw 2.5vw 0.5vw 1vw
+          font-size: 1.1vw
+        
+        
+          
+        .eventmsg-btn
+          position: relative
+          transform: translateX(-2.5vw)
+          outline: none
+          border: none
+          border-radius: 1vw
+          background-color: #75E1C7
+          padding: 0.5vw 1vw
+          margin: 0 0 0 0.5vw
+          font-size: 1vw
+          cursor: pointer
+
+      
+  
+  #eventwindow-right
+    display: flex
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
+    
+    width: 10%
+    
+    #eventoperate
+      display: flex
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-content: center;
+      align-items: center;
+      justify-content: flex-start;
+      
+      #exitbtn1
+        position: absolute
+        transform: translate(1.1vw, -3.7vw)
+        width: 1.5vw
+        height: 1.5vw
+        cursor: pointer
+      
+      
+      #organizer
+        width: 3vw
+        height: 3vw
+        margin-bottom: 0.4vw
+        border-radius: 50%
+        border: solid 0.2vw #CCCCCC
+        
+        
+      #bar
+        width: 2.5vw
+        height: 0.2vw
+        background-color: #555555
+        border-radius: 0.05vw
+        margin-bottom: 0.4vw
+      
+      #member
+        display: flex
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-items: center;
+        height: 20vw
+        overflow: hidden
+        .member
           width: 3vw
           height: 3vw
-        button:hover
-          cursor: pointer
-    
-      #like-y
-        display: none
-        width: 100%
-
-      #like-n
-        display: block
-        width: 100%
-    
-    #applybutton
-      right: 0.5vw
-      bottom: 1vw
-      height: 3vw
-      width: 3vw
-
-      #apply-y
-        display: block
-        width: 100%
+          margin-bottom: 0.4vw
+          border-radius: 50%
+          
+        .participant
+          border: solid 0.2vw #CCCCCC
+        .interested
+          border: solid 0.2vw #EEEEEE
+          
         
-      #apply-n
-        display: none
-        width: 100%
-    #applybutton:hover
-      cursor: pointer
+        
+          
+      #likebutton
+        background-image: url('../file/like-n.png')
+        background-repeat: no-repeat
+        background-size: contain
+        
+        #likebtn-bg
+          background-color: gray
+          
+          
+        form
+          button:hover
+            position: relative
+            transform: scale(1.02)
+        
+          button
+            background: Transparent
+            border: none
+            height: 4vw
+            width: 4vw
+            cursor: pointer
+      
+        #like-y
+          display: none
+          //width: 70%
 
-  #sent
-    position: absolute
-    //transform: translate(-50%, -50%)
-    display: block
-    top: -6px
-    left: -6px
-    right: -6px
-    bottom: -6px
-    width: auto
-    height: auto
-    border-radius: 3vw
-    opacity: 0
-    z-index: -1
-    backdrop-filter: blur(5px) contrast(40%) saturate(40%) brightness(70%)
-    -webkit-backdrop-filter: blur(5px) contrast(40%) saturate(40%) brightness(70%)
+        #like-n
+          display: block
+          //width: 70%
+      
+  
+  
 
-    #mailicon
-      position: absolute
-      transform: translate(-50%, -100%)
-      height: 40%
-      width: auto
-      top: 65%
-      left: 50%
-    
-    p
-      position: absolute
-      transform: translate(-50%, 0)
-      font-size: 4vw
-      text-align: center
-      bottom: 20%
-      left: 50%
-      width: 100%
-      opacity: 1
-      color: white
 #filter1
   position: fixed
   top: 0
